updated the adsense

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,7 +6,8 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RebaMovie</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1102886065611065"
+    <meta name="google-adsense-account" content="ca-pub-6077829775020531">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6077829775020531"
      crossorigin="anonymous"></script>
      <!-- Google tag (gtag.js) -->
      <script async src="https://www.googletagmanager.com/gtag/js?id=G-4FFCWPDX9W"></script>
